--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -9,7 +9,11 @@
 		<description></description >
 		<role-name>admin</role-name>
 	</security-role>
-    
+     <security-role>
+        <description></description>
+        <role-name>manage</role-name>
+    </security-role>
+   <!-- 
 	<security-constraint>
 		<display-name>WebMarket Security_01</display-name>
 		<web-resource-collection>
@@ -23,6 +27,21 @@
 			<role-name>admin</role-name>
 		</auth-constraint>
 	</security-constraint>
+    -->
+    
+    
+    <security-constraint>
+        <display-name>WebMarket Security_01</display-name>
+        <web-resource-collection>
+            <web-resource-name>ADMIN</web-resource-name>
+            <description></description>
+            <url-pattern>/admin/index_ad.jsp</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description>권한 관리자명</description>
+            <role-name>manage</role-name>
+        </auth-constraint>
+    </security-constraint>
     
         <login-config>
             <auth-method>FORM</auth-method>
