--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -32,17 +32,21 @@
     
     <security-constraint>
         <display-name>WebMarket Security_01</display-name>
+        
         <web-resource-collection>
             <web-resource-name>ADMIN</web-resource-name>
             <description></description>
+            <url-pattern>/admin/product_add.jsp</url-pattern>
             <url-pattern>/admin/index_ad.jsp</url-pattern>
+            <url-pattern>/admin/product_edit.jsp</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <description>권한 관리자명</description>
             <role-name>manage</role-name>
         </auth-constraint>
     </security-constraint>
-    
+                
+
         <login-config>
             <auth-method>FORM</auth-method>
             <form-login-config>
@@ -51,4 +55,5 @@
             </form-login-config>
         </login-config>
 
+    
 </web-app>
